--- a/saleappv2/app/templates/admin/index.html
+++ b/saleappv2/app/templates/admin/index.html
@@ -1,18 +1,23 @@
 {% extends 'admin/master.html' %}
 
 {% block body %}
-    <h1 class="text-center text-info">Chao mung</h1>
+{% if current_user.is_authenticated %}
+    <h1 class="text-center text_info">Chao mung den voi trang quan tri</h1>
+    <h2>Chao {{ current_user.name }}</h2>
+{% else %}
 
-    <form action="/action_page.php">
+    <h1 class="text-center text-info">Chao mung</h1>
+    <form method = 'post' action="/admin/login">
       <div class="mb-3 mt-3">
         <label for="email" class="form-label">Email:</label>
-        <input type="text" class="form-control" id="email" placeholder="Enter email" name="email">
+        <input type="text" class="form-control" id="email" placeholder="Enter email" name="username">
       </div>
       <div class="mb-3">
         <label for="pwd" class="form-label">Password:</label>
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="password">
       </div>
 
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+{% endif %}
 {% endblock %}
