--- a/saleappv2/app/templates/index.html
+++ b/saleappv2/app/templates/index.html
@@ -59,7 +59,7 @@
 
 <footer>
     <div class="mt-4 p-5 bg-primary text-white rounded">
-        <h1>Duong Huu Thanh</h1>
+        <h1>Duong Vinh Huy</h1>
         <p>&copy; 2023</p>
     </div>
 </footer>
