--- a/saleappv2/app/templates/index.html
+++ b/saleappv2/app/templates/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous"></script>
+
+    <script src = "{{ url_for('static', filename='js/cart.js') }}"></script>
 </head>
 <body>
 
@@ -30,6 +32,9 @@
                     <a class="nav-link" href="#">{{ c.name }}</a>
                 </li>
                 {% endfor %}
+                <li class="nav-item">
+                    <a class="nav-link" href="#">&#128722; <span style="color: red">0</span></a>
+                </li>
             </ul>
             <form class="d-flex" method="get" action="/">
                 <input class="form-control me-2" type="text" name="kw" placeholder="Nhập từ khóa...">
@@ -49,13 +54,15 @@
                     <h4 class="card-title">{{ p.name }}</h4>
                     <p class="card-text">{{ p.price }} VNĐ</p>
                     <a href="#" class="btn btn-primary">Xem chi tiết</a>
-                    <a href="#" class="btn btn-danger">Đặt hàng</a>
+                    <a href="javascript:;" onclick="AddToCart({{ p.id }}, {{ p.name }}, {{ p.price }})" class="btn btn-danger">Đặt hàng</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
 </section>
+
+
 
 <footer>
     <div class="mt-4 p-5 bg-primary text-white rounded">
