--- a/saleappv2/app/templates/index.html
+++ b/saleappv2/app/templates/index.html
@@ -33,7 +33,7 @@
                 </li>
                 {% endfor %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">&#128722; <span style="color: red">0</span></a>
+                    <a class="nav-link"  href="#">&#128722; <span style="color: red">{{cart.total_quantity}}</span></a>
                 </li>
             </ul>
             <form class="d-flex" method="get" action="/">
